--- a/platform/notebook/requirements.txt
+++ b/platform/notebook/requirements.txt
@@ -1,7 +1,9 @@
 numpy==1.16.4
+sklearn==0.0
 tensorflow==1.14.0
 keras==2.2.5
 mlflow==1.2.0
+Pillow==6.1.0
 
 tfmpl
 # Postgres Database Connection
